kubernetes/apps/network/external/remote-services/docspell.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/service.json
kind: Service
apiVersion: v1
metadata:
  name: remote-external-docspell
  namespace: network
spec:
  ports:
    - port: 7880
      protocol: TCP
      targetPort: 7880
      name: http
  type: ExternalName
  externalName: zeus.nas.internal
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: remote-external-docspell
  namespace: network
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "external.${SECRET_DOMAIN}"
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
    error-pages.home.arpa/enabled: "true"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "docspell"
    gethomepage.dev/description: "Document Management System"
    gethomepage.dev/href: "https://docs.${SECRET_DOMAIN}"
    gethomepage.dev/group: "Office"
    gethomepage.dev/icon: "docspell.png"
    gethomepage.dev/siteMonitor: http://zeus.nas.internal:7880
spec:
  ingressClassName: external
  rules:
    - host: &host "docs.${SECRET_DOMAIN}"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: remote-external-docspell
              port:
                number: 7880
  tls:
    - hosts:
        - *host
      secretName: "${SECRET_DOMAIN/./-}-production-tls"
