kubernetes/apps/network/external/remote-services/localai.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/service.json
kind: Service
apiVersion: v1
metadata:
  name: remote-external-localai
  namespace: network
spec:
  ports:
    - port: 8082
      protocol: TCP
      targetPort: 8082
      name: http
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/endpointslice.json
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: remote-external-localai
  namespace: network
  labels:
    kubernetes.io/service-name: remote-external-localai
addressType: IPv4
ports:
  - port: 8082
endpoints:
  - addresses:
    - ${SETTINGS_NAS_IP}
---
# yaml-language-server: $schema=https://json.schemastore.org/traefik-v3.json
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: localai-ingress
  namespace: network
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "external.${SECRET_DOMAIN}"
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
    kubernetes.io/ingress.class: traefik
    gethomepage.dev/app: "localai"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "localai"
    gethomepage.dev/description: "LocalAI"
    gethomepage.dev/href: "https://ai.${SECRET_DOMAIN}"
    gethomepage.dev/group: "AI"
    gethomepage.dev/icon: "openai.png"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ai.${SECRET_DOMAIN}`)
      kind: Rule
      priority: 1
      services:
        - name: localai
          port: 8082
      middlewares:
        - name: external-noauth-middlewares
  tls:
    secretName: "${SECRET_DOMAIN/./-}-production-tls"
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: remote-external-localai
  namespace: network
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "external.${SECRET_DOMAIN}"
    error-pages.home.arpa/enabled: "true"
    gethomepage.dev/app: "localai"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "localai"
    gethomepage.dev/description: "LocalAI"
    gethomepage.dev/href: "https://ai.${SECRET_DOMAIN}"
    gethomepage.dev/group: "AI"
    gethomepage.dev/icon: "openai.png"
spec:
  ingressClassName: external
  rules:
    - host: &host "ai.${SECRET_DOMAIN}"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: remote-external-localai
              port:
                number: 8082
  tls:
    - hosts:
        - *host
      secretName: "${SECRET_DOMAIN/./-}-production-tls"
