kubernetes/apps/network/external/remote-services/nextcloud.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/service.json
kind: Service
apiVersion: v1
metadata:
  name: remote-external-nextcloud
  namespace: network
spec:
  ports:
    - port: 4443
      protocol: TCP
      targetPort: 4443
      name: https
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/endpointslice.json
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: remote-external-nextcloud
  namespace: network
  labels:
    kubernetes.io/service-name: remote-external-nextcloud
addressType: IPv4
ports:
  - port: 4443
endpoints:
  - addresses:
    - ${SETTINGS_NAS_IP}
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: remote-external-nextcloud
  namespace: network
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "external.${SECRET_DOMAIN}"
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
    error-pages.home.arpa/enabled: "true"
    gethomepage.dev/app: "nextcloud"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "nextcloud"
    gethomepage.dev/description: "Personal Cloud Storage"
    gethomepage.dev/href: "https://cloud.${SECRET_DOMAIN}"
    gethomepage.dev/group: "Office"
    gethomepage.dev/icon: "nextcloud.png"
    # gethomepage.dev/widget.type: "nextcloud"
    # gethomepage.dev/widget.url: "http://cloud.${SECRET_DOMAIN}"
    # gethomepage.dev/widget.key: "${HOMEPAGE_VAR_NEXTCLOUD_KEY}"
    gethomepage.dev/siteMonitor: https://${SETTINGS_NAS_IP}:4443
spec:
  ingressClassName: external
  rules:
    - host: &host "cloud.${SECRET_DOMAIN}"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: remote-external-nextcloud
              port:
                number: 4443
  tls:
    - hosts:
        - *host
      secretName: "${SECRET_DOMAIN/./-}-production-tls"
