kubernetes/apps/network/external/remote-services/searxng.yaml
# SETTINGS_SEARCH_IP
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/service.json
kind: Service
apiVersion: v1
metadata:
  name: remote-external-searxng
  namespace: network
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
      name: http
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/endpointslice.json
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: remote-external-searxng
  namespace: network
  labels:
    kubernetes.io/service-name: remote-external-searxng
addressType: IPv4
ports:
  - port: 8080
endpoints:
  - addresses:
    - ${SETTINGS_SEARCH_IP}
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: remote-external-searxng
  namespace: network
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "external.${SECRET_DOMAIN}"
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
    error-pages.home.arpa/enabled: "true"
    gethomepage.dev/app: "searxng"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "searxng"
    gethomepage.dev/description: "SearxNG"
    gethomepage.dev/href: "https://search.${SECRET_DOMAIN}"
    gethomepage.dev/group: "Services"
    gethomepage.dev/icon: "searxng.png"
    gethomepage.dev/siteMonitor: http://${SETTINGS_SEARCH_IP}:8080
spec:
  ingressClassName: external
  rules:
    - host: &host "search.${SECRET_DOMAIN}"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: remote-external-searxng
              port:
                number: 8080
  tls:
    - hosts:
        - *host
      secretName: "${SECRET_DOMAIN/./-}-production-tls"
