kubernetes/apps/network/external/remote-services/www.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/service.json
kind: Service
apiVersion: v1
metadata:
  name: remote-external-www
  namespace: network
spec:
  ports:
    - port: 442
      protocol: TCP
      targetPort: 442
      name: https
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/endpointslice.json
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: remote-external-www
  namespace: network
  labels:
    kubernetes.io/service-name: remote-external-www
addressType: IPv4
ports:
  - port: 442
endpoints:
  - addresses:
    - ${SETTINGS_NAS_IP}
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: remote-external-www
  namespace: network
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "external.${SECRET_DOMAIN}"
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
    error-pages.home.arpa/enabled: "true"
    gethomepage.dev/app: "www"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "www"
    gethomepage.dev/description: "Personal Website"
    gethomepage.dev/href: "https://www.${SECRET_DOMAIN}"
    gethomepage.dev/group: "Web"
    gethomepage.dev/icon: "wordpress.png"
    gethomepage.dev/siteMonitor: https://${SETTINGS_NAS_IP}:442
spec:
  ingressClassName: external
  rules:
    - host: "${SECRET_DOMAIN}"
      http: &backend
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: remote-external-www
              port:
                number: 442
    - host: &host "www.${SECRET_DOMAIN}"
      http: *backend
    - host: "code.${SECRET_DOMAIN}"
      http: *backend
    - host: "family.${SECRET_DOMAIN}"
      http: *backend
    - host: "payback.${SECRET_DOMAIN}"
      http: *backend

  tls:
    - hosts:
        - *host
      secretName: "${SECRET_DOMAIN/./-}-production-tls"
